@@ -296,7 +296,6 @@
 
 	  <child>
 	    <widget class="GtkSeparatorToolItem" id="separatortoolitem2">
-	      <property name="visible">True</property>
 	      <property name="draw">True</property>
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
@@ -309,7 +308,6 @@
 
 	  <child>
 	    <widget class="GtkToolButton" id="prefs_button">
-	      <property name="visible">True</property>
 	      <property name="stock_id">gtk-preferences</property>
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
@@ -324,7 +322,6 @@
 
 	  <child>
 	    <widget class="GtkToolButton" id="quit_button">
-	      <property name="visible">True</property>
 	      <property name="stock_id">gtk-quit</property>
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
